fix outer curve x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,11 @@ html{
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: clip;
+}
+
+
 @theme {
   --color-nurture: var(--nurture);
   --color-gnurture: var(--gnurture);
